# tactile_envs

./: LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: test_env_door.py  test_env_hand.py  test_env_insertion.py
tactile_envs/: __init__.py
tactile_envs/assets/insertion/: generate_pad_collisions.py  left_pad_collisions.xml  scene.xml  touch_sensors.xml
tactile_envs/assets/insertion/assets/: holder1.stl  holder2.stl  holder3.stl  horizontal.stl  horizontal_wall1.stl  horizontal_wall2.stl  horizontal_wall3.stl  horizontal_wall4.stl  rectangle.stl  rectangle_wall1.stl  rectangle_wall2.stl  rectangle_wall3.stl  rectangle_wall4.stl  rhombus.stl  rhombus_wall1.stl  rhombus_wall2.stl  rhombus_wall3.stl  rhombus_wall4.stl  square.stl  square_wall1.stl  square_wall2.stl  square_wall3.stl  square_wall4.stl  trapezoidal.stl  trapezoidal_wall1.stl  trapezoidal_wall2.stl  trapezoidal_wall3.stl  trapezoidal_wall4.stl  triangle.stl  triangle_wall1.stl  triangle_wall2.stl  triangle_wall3.stl  triangle_wall4.stl  vertical.stl  vertical_wall1.stl  vertical_wall2.stl  vertical_wall3.stl  vertical_wall4.stl
tactile_envs/envs/: __init__.py  insertion.py
tactile_envs/envs/Gymnasium-Robotics/gymnasium_robotics/: __init__.py
tactile_envs/envs/Gymnasium-Robotics/gymnasium_robotics/envs/: robot_env.py
tactile_envs/envs/robosuite/robosuite/demos/: demo_old_gym.py  demo_old_gym_scripted.py  demo_random_action.py  demo_scripted.py
tactile_envs/envs/robosuite/robosuite/models/: base.py
tactile_envs/utils/: add_tactile.py  resize_dict.py
(+51 files in other folders)
